plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.config'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
    useJUnitPlatform()
}
subprojects {
    apply plugin : 'java'
    apply plugin : 'org.springframework.boot'
    apply plugin : 'io.spring.dependency-management'

    group = 'com.config'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    ext {
        set('springCloudVersion', "2023.0.3")
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        if (project.name.contains("eureka-server")){
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
        }
        if (!project.name.contains("eureka-server") && !project.name.contains("config-server") && !project.name.contains("api-gateway")){
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
            implementation 'org.keycloak:keycloak-spring-boot-starter:24.0.3'
            implementation 'org.keycloak:keycloak-admin-client:24.0.3'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
            implementation 'org.springframework.boot:spring-boot-starter-web'
            implementation 'org.springframework.cloud:spring-cloud-starter-config'
            implementation 'org.projectlombok:lombok'
            annotationProcessor 'org.projectlombok:lombok'
            implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
            implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
            implementation 'org.springframework.boot:spring-boot-starter-actuator'
            implementation 'io.micrometer:micrometer-tracing-bridge-brave'
            implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
            implementation 'org.springframework.boot:spring-boot-starter-validation'
            implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
            implementation 'org.keycloak:keycloak-spring-boot-starter:24.0.3'
            implementation 'org.keycloak:keycloak-admin-client:24.0.3'
            implementation 'org.modelmapper:modelmapper:3.2.0'
        }
        if (project.name.contains("task-service")){
            implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
            runtimeOnly 'org.postgresql:postgresql'
        }
        if(project.name.contains("api-gateway")){
            implementation 'org.springframework.cloud:spring-cloud-starter-config'
            implementation 'org.springframework.boot:spring-boot-starter-webflux'
            implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
            implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        }
        if (project.name.contains("config-server")){
            implementation 'org.springframework.cloud:spring-cloud-config-server'
        }
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
        }
    }

}